Debian changelog update.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-django-geoshortcuts (0.1) stable; urgency=low
+python-django-geoshortcuts (0.1~gista50+1) lenny; urgency=low
 
   * Initial version
 
